style: minor code style / javadoc improvements